objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Buyer</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Handover</fullName>
        </values>
        <values>
            <fullName>Leads</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Sale Pending</fullName>
        </values>
        <values>
            <fullName>Sold</fullName>
        </values>
        <values>
            <fullName>Test Drive Complete</fullName>
        </values>
        <values>
            <fullName>Test Drive Scheduled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Seller</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Evaluate and Pickup</fullName>
        </values>
        <values>
            <fullName>Handover</fullName>
        </values>
        <values>
            <fullName>Leads</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Prepare Car for Sale</fullName>
        </values>
        <values>
            <fullName>Quote and Schedule</fullName>
        </values>
        <values>
            <fullName>Sell Car</fullName>
        </values>
        <values>
            <fullName>Sold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account.Primary_Contact_ID__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Primary__c</fullName>
        <formula>Account.Primary_Contact_ID__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone (Primary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Secondary__c</fullName>
        <formula>Account.Primary_Contact_ID__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone (Secondary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Amount__c</fullName>
        <label>Advance Funds Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Fee_2__c</fullName>
        <label>Advance Funds Fee 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Fee_Override__c</fullName>
        <label>Advance Funds Fee Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Fee__c</fullName>
        <description>$100, unless overridden with Advance Funds Override or it&apos;s a Tesla deal.</description>
        <formula>BLANKVALUE(
  Advance_Funds_Fee_Override__c, 
  IF(
    !ISPICKVAL(LeadSource, &quot;Tesla - Remarketing&quot;) &amp;&amp; !ISPICKVAL(Advance_Funds_Type__c, &quot;Lienholder Only&quot;), 
    100,
    0
  )
)</formula>
        <inlineHelpText>$100, unless overridden with Advance Funds Override or it&apos;s a Tesla deal.</inlineHelpText>
        <label>Advance Funds Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_In__c</fullName>
        <label>Advance Funds In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Net_2__c</fullName>
        <label>Advance Funds Net 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Net__c</fullName>
        <formula>IF(
  Advance_Funds_Amount__c != 0,
  Advance_Funds_Amount__c - (
    Seller_Costs_DMV__c + 
    Payoff_Amount__c + 
    IF( Seller_Costs_Repairs__c != 0, Seller_Costs_Repairs__c, Seller_Costs_Repairs_Estimate__c) +
    Advance_Funds_Fee__c
  ),
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advance Funds (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Out__c</fullName>
        <label>Advance Funds Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Sent_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advance Funds Sent By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Status__c</fullName>
        <label>Advance Funds Status</label>
        <picklist>
            <picklistValues>
                <fullName>Worthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Payout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Tracking_Number__c</fullName>
        <label>Advance Funds Tracking Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advance_Funds_Type__c</fullName>
        <label>Advance Funds Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lienholder Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anything_Else__c</fullName>
        <label>Anything Else</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Contact_URL__c</fullName>
        <formula>IF( 
ISNULL(Migration_Source_ID__c), 
&apos;&apos;, 
Migration_Source_ID__r.Base_Object_URL__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Contact URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Deal_ID__c</fullName>
        <formula>Migration_Source_ID__r.Base_Deal_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Deal_URL__c</fullName>
        <formula>IF(
    ISNULL(Migration_Source_ID__c),
    &apos;&apos;,
    HYPERLINK(Migration_Source_ID__r.Base_Object_URL__c, Migration_Source_ID__r.Base_Object_URL__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Deal URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Name__c</fullName>
        <label>Base Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Base_Returned_On__c</fullName>
        <label>Base Returned On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Seller_ID__c</fullName>
        <description>ContactID in Base of the seller contact associated with this opportunity when it was a Base deal.</description>
        <label>Base Seller ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Insurance_Survey__c</fullName>
        <label>Buyer Insurance Survey</label>
        <picklist>
            <picklistValues>
                <fullName>First Time Car Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asked About Insurance Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Have Insurance (Interested)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does Not Have Insurance (Not Interested)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content With Current Insurance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buyer_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer Survey</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Shift_Survey__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Buyer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Shift_Survey__c</referenceTo>
        <relationshipLabel>Buyer Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Fee__c</fullName>
        <label>Cancellation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Activity_URL__c</fullName>
        <label>Car Activity URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Car_Commission__c</fullName>
        <label>Car Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chance_To_Win__c</fullName>
        <label>Chance To Win</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Request_ID__c</fullName>
        <description>The code uniquely identifying the request sent to our server.</description>
        <label>Client Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Timestamp__c</fullName>
        <description>The time at which the user&apos;s client reported that the request generating this object was sent. Stored as text to preserve sub-second precision.</description>
        <label>Client Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Covered_Repair_Cost__c</fullName>
        <label>Covered Repair Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Craigslist_Listing_Email_Inquiry__c</fullName>
        <label>Craigslist Listing Email Inquiry</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Craigslist_Listing_Phone_Number_Inquiry__c</fullName>
        <label>Craigslist Listing Phone Number Inquiry</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Experience Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Seller_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Guaranteed__c</fullName>
        <label>Days Guaranteed</label>
        <picklist>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Since_Handover__c</fullName>
        <formula>TODAY() - Vehicle_ID__r.Purchased_Vehicle_Order_ID__r.Handover_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Handover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desired_Time_Frame_Lead_Score_Input__c</fullName>
        <formula>(0.748728595*(CASE(Seller_Desired_Timeframe__c, &quot;Within 30 Days&quot;, 1, 0))) 
+ 
(-0.256705371*(CASE(Seller_Desired_Timeframe__c, &quot;Within 90 Days&quot;, 1, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desired Time Frame Lead Score Input</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Did_Cover_Repair_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did Cover Repair Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_To_Wholesale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct To Wholesale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distressed_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Distressed Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Disturb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Disturb</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Of_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first Opportunity created that matches our duplicate criteria: same e-mail for Primary Contact and Year/Make/Model.</description>
        <inlineHelpText>The first Opportunity created that matches our duplicate criteria: same e-mail for Primary Contact and Year/Make/Model.</inlineHelpText>
        <label>Duplicate Of</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entered_Stage_Evaluate_And_Pickup__c</fullName>
        <label>Entered Stage Evaluate And Pickup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entered_Stage_Handover__c</fullName>
        <label>Entered Stage Handover</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entered_Stage_Leads__c</fullName>
        <label>Entered Stage Leads</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entered_Stage_Lost__c</fullName>
        <label>Entered Stage Lost</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entered_Stage_Prepare_Car_For_Sale__c</fullName>
        <label>Entered Stage Prepare Car For Sale</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entered_Stage_Quote_And_Schedule__c</fullName>
        <label>Entered Stage Quote And Schedule</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entered_Stage_Sell_Car__c</fullName>
        <label>Entered Stage Sell Car</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Entered_Stage_Sold__c</fullName>
        <label>Entered Stage Sold</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalated_Not_Priced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated Not Priced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Price_Adjustment__c</fullName>
        <label>Evaluation Price Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Pickup_On__c</fullName>
        <label>Expected Pickup On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Tesla_Delivery__c</fullName>
        <label>Expected Tesla Delivery</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Experiment_ID__c</fullName>
        <description>ID based on which experimental groups for this opportunity should be chosen (e.g. for pricing engine experiments).</description>
        <label>Experiment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experiment__c</fullName>
        <label>Experiment</label>
        <picklist>
            <picklistValues>
                <fullName>Self Serve Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Serve Listing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selling As Is</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extra_Details__c</fullName>
        <label>Extra Details</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Guaranteed_Price_2__c</fullName>
        <label>Final Guaranteed Price 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Guaranteed_Price__c</fullName>
        <formula>Guaranteed_Price__c - Pickup_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Guaranteed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Sale_Price__c</fullName>
        <formula>Vehicle_ID__r.Purchased_Vehicle_Order_ID__r.Final_Sale_Price__c</formula>
        <label>Final Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Fee_Percent__c</fullName>
        <label>Flat Fee - Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Flat_Fee__c</fullName>
        <label>Flat Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GM_Discretionary_Amount__c</fullName>
        <label>GM Discretionary Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GM_Discretionary_Reason__c</fullName>
        <label>GM Discretionary Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Issues with paperwork/transfer of ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No gas on delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems during test drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems with CE post-test drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems with CX scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems with deposit policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems with F&amp;I partners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gray_Area_Mileage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gray Area Mileage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Price__c</fullName>
        <label>Guaranteed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HTTP_Referrer__c</fullName>
        <label>HTTP Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handover_Date__c</fullName>
        <formula>Vehicle_ID__r.Purchased_Vehicle_Order_ID__r.Handover_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Duplicates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the creation of this Opportunity was followed by the creation of Opportunities that are considered duplicates (which can be found linked under Opportunity Notes).</description>
        <inlineHelpText>Indicates whether the creation of this Opportunity was followed by the creation of Opportunities that are considered duplicates (which can be found linked under Opportunity Notes).</inlineHelpText>
        <label>Has Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Lien__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Lien</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Trade_In__c</fullName>
        <label>Has Trade-In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Program_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Incentive Program</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 3) OR (2 AND 4)</booleanFilter>
            <errorMessage>Incentive program can&apos;t be used with this type of Opportunity.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Seller</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Buyer</value>
            </filterItems>
            <filterItems>
                <field>Incentive_Program__c.Is_Seller_Promotion__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Incentive_Program__c.Is_Buyer_Promotion__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Incentive_Program__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Buyer_Outreach__c</fullName>
        <label>Initial Buyer Outreach</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hot Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Coming Soon Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Sale Pending Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inside Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Advance_Funds_Check__c</fullName>
        <label>Is Attached Advance Funds Check</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Application_For_Title__c</fullName>
        <label>Is Attached Application For Title</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Authorization_For_Payoff__c</fullName>
        <label>Is Attached Authorization For Payoff</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Autocheck_VHR__c</fullName>
        <label>Is Attached Autocheck VHR</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Buyer_Driver_License__c</fullName>
        <label>Is Attached Buyer Driver License</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Buyer_Insurance__c</fullName>
        <label>Is Attached Buyer Insurance</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Buyer_Payment_Check_One__c</fullName>
        <label>Is Attached Buyer Payment Check One</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Buyer_Payment_Check_Two__c</fullName>
        <label>Is Attached Buyer Payment Check Two</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Carfax_VHR__c</fullName>
        <label>Is Attached Carfax VHR</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Certificate_Of_Title__c</fullName>
        <label>Is Attached Certificate Of Title</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Completed_262_Form__c</fullName>
        <label>Is Attached Completed 262 Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Payoff_Check__c</fullName>
        <label>Is Attached Payoff Check</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Payoff_Statement__c</fullName>
        <label>Is Attached Payoff Statement</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Seller_Driver_License__c</fullName>
        <label>Is Attached Seller Driver License</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Seller_Insurance__c</fullName>
        <label>Is Attached Seller Insurance</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Seller_Payment_Check__c</fullName>
        <label>Is Attached Seller Payment Check</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Seller_Signed_262_Form__c</fullName>
        <label>Is Attached Seller Signed 262 Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Seller_Vehicle_Registration__c</fullName>
        <label>Is Attached Seller Vehicle Registration</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Service_Records__c</fullName>
        <label>Is Attached Service Records</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Smog_Certificate__c</fullName>
        <label>Is Attached Smog Certificate</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Attached_Vehicle_Registration_For_New__c</fullName>
        <label>Is Attached Vehicle Registration For New</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Aware_of_Advance_Funds_Qualification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Aware Of Advance Funds Qualification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <description>Indicates whether this Opportunity is considered a duplicate of an existing Opportunity (which is connected by Duplicate Of).</description>
        <formula>Duplicate_Of_ID__c != NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether this Opportunity is considered a duplicate of an existing Opportunity (which is connected by Duplicate Of).</inlineHelpText>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_From_Sacramento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is From Sacramento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_From_San_Diego__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is From San Diego</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Quoted_At__c</fullName>
        <label>Last Quoted At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Six_Of_VIN_c__c</fullName>
        <formula>Vehicle_ID__r.Last_Six_Of_VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Six Of VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Paperwork_Fee_2__c</fullName>
        <label>Late Paperwork Fee 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Late_Paperwork_Fee_Override__c</fullName>
        <label>Late Paperwork Fee Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Late_Paperwork_Fee__c</fullName>
        <description>See Trigger updatePaperworkFeePending on Vehicle and Vehicle__c.Paperwork_Fee_Pending__c (if you&apos;re an admin)</description>
        <formula>BLANKVALUE(
  Late_Paperwork_Fee_Override__c,
  IF(
    (!ISBLANK(Entered_Stage_Sold__c) &amp;&amp; DATETIMEVALUE(Entered_Stage_Sold__c) - DATETIMEVALUE(Seller_Contract_Signed_On__c) &gt; 30) 
    || (!ISBLANK(Seller_Contract_Signed_On__c) &amp;&amp; NOW() - DATETIMEVALUE(Seller_Contract_Signed_On__c) &gt; 30),
    BLANKVALUE(Vehicle_ID__r.Paperwork_Fee_Pending__c, 0),
    0 /* Note: that there is a trigger on Vehicle that populates Paperwork_Fee_Pending__c. */
  )
)</formula>
        <inlineHelpText>Override with the Late Paperwork Fee Override. $300 if Paperwork Missing, Seller Contract Signed &gt; 30 days, and Paperwork Missing Reason=(Payoff-Underwater or Statement, Seller-Not..., Title-Missing..Seller, Out of State, Waiting On Seller)</inlineHelpText>
        <label>Late Paperwork Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_Distributed_At__c</fullName>
        <label>Lead Distributed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lender_Name__c</fullName>
        <label>Lender Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Plate__c</fullName>
        <formula>Vehicle_ID__r.License_Plate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Plate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lien_Type__c</fullName>
        <label>Lien Type</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Vehicle_ID__r.List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>